<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterRestaurant">

    <TextView
        android:id="@+id/welcomeAdmin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/welcome"
        android:textSize="18sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/registerRestaurantMsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/please_register_your_restaurant"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcomeAdmin"/>

    <EditText
        android:id="@+id/editTextRestaurantName"
        android:layout_width="229dp"
        android:layout_height="73dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/restaurant_name"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registerRestaurantMsg" />

    <EditText
        android:id="@+id/editTextRestaurantCuisine"
        android:layout_width="235dp"
        android:layout_height="79dp"
        android:ems="10"
        android:hint="Restaurant Cuisine"
        android:textAlignment="center"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextRestaurantName" />

    <EditText
        android:id="@+id/editTextRestaurantLocation"
        android:layout_width="235dp"
        android:layout_height="79dp"
        android:ems="10"
        android:hint="@string/restaurant_location"
        android:textAlignment="center"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextRestaurantCuisine" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="210dp"
        android:layout_height="120dp"
        android:layout_marginTop="16dp"
        android:textSize="30sp"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextRestaurantLocation" />

</androidx.constraintlayout.widget.ConstraintLayout>